--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,18 +1,86 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_margin="16dp"
+    android:orientation="vertical"
     tools:context=".MainActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
+    <com.google.android.material.textfield.TextInputLayout        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:id="@+id/tilValor">
+    <com.google.android.material.textfield.TextInputEditText
+        android:id="@+id/etValor"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="Digite o valor"
+        android:inputType="numberDecimal"/>
+    </com.google.android.material.textfield.TextInputLayout>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <TextView
+        android:id="@+id/tvSeekBar"
+        android:layout_width="80dp"
+        android:layout_height="wrap_content"
+        android:text="0%"
+        android:gravity="center"
+        android:layout_below="@+id/tilValor"
+        android:paddingTop="32dp"
+        />
+
+    <SeekBar
+        android:id="@+id/seekBar"
+        android:layout_below= "@id/tilValor"
+        android:layout_width="300dp"
+        android:layout_height="wrap_content"
+        android:paddingTop="32dp"
+        android:layout_alignParentRight="true"
+        android:max="30"
+        />
+
+    <TextView
+        android:layout_width="80dp"
+        android:layout_height="wrap_content"
+        android:text="Gorjeta"
+        android:gravity="center"
+        android:layout_below="@+id/seekBar"
+        android:paddingTop="32dp"
+        />
+
+<TextView
+        android:id="@+id/tvGorjeta"
+        android:layout_width="300dp"
+        android:layout_height="wrap_content"
+        android:text="R$0,00"
+        android:gravity="center"
+
+        android:layout_below="@id/seekBar"
+        android:paddingTop="32dp"
+        android:layout_alignParentRight="true"
+    />
+
+    <TextView
+        android:layout_width="80dp"
+        android:layout_height="wrap_content"
+        android:text="Total"
+        android:gravity="center"
+        android:layout_below="@+id/tvGorjeta"
+        android:paddingTop="32dp"
+        />
+
+    <TextView
+        android:id="@+id/tvTotal"
+        android:layout_width="300dp"
+        android:layout_height="wrap_content"
+        android:text="R$0,00"
+        android:gravity="center"
+        android:paddingTop="32dp"
+        android:layout_below="@id/tvGorjeta"
+        android:layout_alignParentRight="true"
+        />
+
+
+
+
+</RelativeLayout>
